--- a/src/main/resources/templates/orderPages/orderSave2.html
+++ b/src/main/resources/templates/orderPages/orderSave2.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!--    다음 우편번호-->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script type="text/javascript"
             src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <!-- iamport.payment.js == 아임포트 결제모듈 연동 역할 -->
+    <!--    아임포트 결제-->
     <script type="text/javascript"
             src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -32,7 +33,6 @@
     <form action="/order/save" method="post">
         <input type="hidden" name="userId" th:value="${session.member.userId}">
         <input type="hidden" name="memberId" th:value="${session.member.id}">
-        <input type="hidden" name="itemId" th:value="${item.id}">
         <table class="table">
             <tr>
                 <th>상품</th>
@@ -41,18 +41,28 @@
                 <th>상품수량</th>
                 <th>총가격</th>
             </tr>
-            <tr>
+            <tr th:each="item: ${cartList}">
+                <input type="hidden" name="cartItemId" th:value="${item.id}">
                 <td class="box"><img class="profile" th:src="@{|/upload/${item.itemImage}}" alt=""></td>
-                <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control" readonly></td>
-                <td><input type="text" name="itemPrice" th:value="${item.itemPrice}" class="form-control" readonly></td>
+                <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control"
+                           readonly></td>
+                <td><input type="text" name="itemPrice" th:id="${item.id}" th:value="${item.itemPrice}"
+                           class="form-control" readonly></td>
                 <td>
                     <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
                            name="orderCount"
-                           onchange="total()">
+                           th:onchange="total([[${item}]])" readonly>
                 </td>
                 <td>
-                    <input type="text" th:value="${item.itemPrice * item.cartCount}" name="orderPrice" id="totalPrice"
+                    <input type="text" th:value="${item.itemPrice * item.cartCount}" name="orderPrice"
+                           th:id="totalPrice+${item.id}"
                            readonly>
+                </td>
+
+            </tr>
+            <tr>
+                <td colspan="4">총 결제금액</td>
+                <td><input type="text" name="itemPriceTotal" id="itemPriceTotal" th:value="${itemPriceTotal}" readonly>
                 </td>
             </tr>
         </table>
@@ -110,14 +120,48 @@
 </div>
 <a href="/cart/save">장바구니</a>
 <a href="/order/save">바로구매</a>
+<input type="button" value="테스트" onclick="test()">
 
 
 </body>
 <script th:inline="javascript">
+    const test = () => {
+        console.log("test");
+        let aJsonArray = new Array();
+        for (let i = 0; i < [[${cartList}]].length; i++) {
+            aJson = new Object();
+            aJson.id = [[${cartList}]][i].id;
+            aJson.itemName = [[${cartList}]][i].itemName;
+            aJson.itemPrice = [[${cartList}]][i].itemPrice;
+            aJson.cartCount = [[${cartList}]][i].cartCount;
+            aJson.itemImage = [[${cartList}]][i].itemImage;
+            aJson.totalPrice = aJson.itemPrice * aJson.cartCount;
+            aJsonArray.push(aJson);
+        }
+        console.log(aJsonArray);
+        $.ajax({
+            type: "post",
+            url: "/order/save2",
+            data: {
+                "cartList": JSON.stringify(aJsonArray)
+            },
+            dataType: "json",
+            success: function (res) {
+                console.log("성공");
+
+
+            },
+            error: function (err) {
+                console.log("실패");
+            }
+        });
+
+    }
 
     function requestPay() {
+        const list = [[${cartList}]];
         const itemName = document.getElementById("itemName").value;
-        let totalPrice =document.getElementById("totalPrice").value;
+        let totalPrice = document.getElementById("itemPriceTotal").value;
         const memberEmail = document.getElementById("memberEmail").value;
         const memberName = document.getElementById("memberName").value;
         const memberMobile = document.getElementById("memberMobile").value;
@@ -130,22 +174,22 @@
         IMP.request_pay({
             pg: "kakaopay",
             pay_method: "card",
-            merchant_uid : 'merchant_'+new Date().getTime(),
-            name : itemName,
-            amount : totalPrice,
-            buyer_email : memberEmail,
-            buyer_name : memberName,
-            buyer_tel : memberMobile,
-            buyer_addr : memberAddress + detailAddress+ extraAddress,
-            buyer_postcode : postcode,
+            merchant_uid: 'merchant_' + new Date().getTime(),
+            name: itemName,
+            amount: totalPrice,
+            buyer_email: memberEmail,
+            buyer_name: memberName,
+            buyer_tel: memberMobile,
+            buyer_addr: memberAddress + detailAddress + extraAddress,
+            buyer_postcode: postcode,
         }, function (rsp) { // callback
             if (rsp.success) {
                 form.submit();
                 console.log(rsp);
                 var msg = '결제가 완료되었습니다.\n';
-                msg += '고유ID : ' + rsp.imp_uid+"\n";
-                msg += '상점 거래ID : ' + rsp.merchant_uid+"\n";
-                msg += '결제 금액 : ' + rsp.paid_amount+'원\n';
+                msg += '고유ID : ' + rsp.imp_uid + "\n";
+                msg += '상점 거래ID : ' + rsp.merchant_uid + "\n";
+                msg += '결제 금액 : ' + rsp.paid_amount + '원\n';
                 msg += '카드 승인번호 : ' + rsp.apply_num;
             } else {
                 console.log(rsp);
@@ -162,7 +206,7 @@
         const detailAddress = document.querySelector('input[name=detailAddress]');
         const extraAddress = document.querySelector('input[name=extraAddress]');
         const postcode = document.querySelector('input[name=postcode]');
-        if(document.querySelector('input[type=checkbox]').checked) {
+        if (document.querySelector('input[type=checkbox]').checked) {
             memberAddress.value = [[${session.member.memberAddress}]];
             detailAddress.value = [[${session.member.detailAddress}]];
             extraAddress.value = [[${session.member.extraAddress}]];
@@ -176,12 +220,13 @@
     }
 
 
-    const total = () => {
+    const total = (item) => {
         console.log("함수호출")
         const itemCount = document.getElementById("itemCountInput").value;
-        let itemPrice = [[${item.itemPrice}]];
+        const itemPrice = document.getElementById(item.id).value;
+        console.log(itemPrice);
         let totalPrice = itemCount * itemPrice;
-        document.getElementById("totalPrice").value = totalPrice;
+        document.getElementById("totalPrice" + item.id).value = totalPrice;
     }
 
     function sample6_execDaumPostcode() {
@@ -233,5 +278,6 @@
     }
 
 </script>
+
 
 </html>
