메인화면 화면비율 유지

--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -6,7 +6,8 @@
     <script th:src="@{/js/axios.min.js}"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="/static/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
+<!--    bootstrap cdn-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/swiper.css}" type="text/css">
@@ -19,7 +20,6 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous"></script>
     <script src="/static/js/bootstrap.bundle.js"></script>
-<!--    swiper cdn-->
     <style>
         .aa {
             display: inline-block;
