--- a/src/main/resources/templates/cartPages/cartList.html
+++ b/src/main/resources/templates/cartPages/cartList.html
@@ -131,9 +131,25 @@
     }
     //수량변경 시 상품금액
     const total = (cart) => {
+        let orderCount = document.getElementById(cart.id + "a").value;
+        $.ajax({
+            type:"get",
+            url:"/cart/change",
+            data:{
+                id: cart.id,
+                cartCount: orderCount
+            },
+            dataType: "text",
+            success:function (cartResult){
+              console.log("성공")
+            },
+            error: function (){
+                console.log("실패");
+
+            }
+        });
         const length = document.getElementById("cartList").value;
         console.log(cart)
-        let orderCount = document.getElementById(cart.id + "a").value;
         const itemPrice2 = cart.itemPrice;
         let itemPrice = itemPrice2;
         let totalPrice = orderCount * itemPrice;
