상품등록 코드 수정

--- a/src/main/resources/templates/itemPages/itemSave.html
+++ b/src/main/resources/templates/itemPages/itemSave.html
@@ -77,7 +77,7 @@
             <textarea name="itemContents" id="itemContents" cols="30" rows="10" placeholder="상품 설명"
                       class="form-control"></textarea>
 
-        <input style="display: block;" type="file" id="inputMultipleImage" multiple onchange="readURL(this)">
+        <input style="display: block;" type="file" name="itemFile" id="inputMultipleImage" multiple onchange="readURL(this)">
 <!--        <div id="multipleContainer" style="width: 300px; height: 150px;"></div>-->
 <input type="submit" value="저장" class="btn btn-success">
 </form>
